--- a/jors2015.bib
+++ b/jors2015.bib
@@ -1,3 +1,101 @@
+
+@Article{stodden2008,
+  author = 	 {Victoria Stodden},
+  title = 	 {The Legal Framework for Reproducible Scientific Research: Licensing and Copyright}, 
+  journal = 	 {Computing in Science \& Engineering},
+  year = 	 {2008},
+  volume = 	 {11},
+  number = 	 {1}
+
+}
+
+
+@Book{ReproResearch2010,
+  title =	 {Reproducible Research},
+  publisher =	 {IEEE Computer Society},
+  year =	 {2010},
+  volume =	 {12},
+  number =	 {05},
+  month =	 {Sept},
+  note =	 {ISSN 1521-9615}
+}
+
+@ARTICLE{Bailey_setthe,
+    author = {David Bailey and Jonathan Borwein and Victoria Stodden},
+    title = {Set the default to \"open\"},
+    journal = {Notices of the AMS},
+    year = {},
+    pages = {2013}
+}
+
+
+@article{DBLP:journals/corr/JamesWS14,
+  author    = {Doug James and
+               Nancy Wilkins{-}Diehr and
+               Victoria Stodden and
+               Dirk Colbry and
+               Carlos Rosales and
+               Mark R. Fahey and
+               Justin Shi and
+               Rafael Ferreira da Silva and
+               Kyo Lee and
+               Ralph Roskies and
+               Laurence Loewe and
+               Susan Lindsey and
+               Rob Kooper and
+               Lorena Barba and
+               David H. Bailey and
+               Jonathan M. Borwein and
+               {\'{O}}scar Corcho and
+               Ewa Deelman and
+               Michael C. Dietze and
+               Benjamin Gilbert and
+               Jan Harkes and
+               Seth Keele and
+               Praveen Kumar and
+               Jong Lee and
+               Erika Linke and
+               Richard Marciano and
+               Luigi Marini and
+               Chris Mattmann and
+               Dave Mattson and
+               Kenton McHenry and
+               Robert T. McLay and
+               Sheila Miguez and
+               Barbara S. Minsker and
+               Mar{\'{\i}}a S. P{\'{e}}rez{-}Hern{\'{a}}ndez and
+               Dan Ryan and
+               Mats Rynge and
+               Idafen Santana P{\'{e}}rez and
+               Mahadev Satyanarayanan and
+               Gloriana St. Clair and
+               Keith Webster and
+               Eivind Hovig and
+               Daniel S. Katz and
+               Sophie Kay and
+               Geir Kjetil Sandve and
+               David Skinner and
+               Gabrielle Allen and
+               John Cazes and
+               Kym Won Cho and
+               Jim Fonseca and
+               Lorraine Hwang and
+               Lars Koesterke and
+               Pragnesh Patel and
+               Line Pouchard and
+               Edward Seidel and
+               Isuru Suriarachchi},
+  title     = {Standing Together for Reproducibility in Large-Scale Computing: Report
+               on reproducibility@XSEDE},
+  journal   = {CoRR},
+  volume    = {abs/1412.5557},
+  year      = {2014},
+  url       = {http://arxiv.org/abs/1412.5557},
+  timestamp = {Sun, 04 Sep 2016 11:55:16 +0200},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/JamesWS14},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
 @TechReport{collberg-et-al:2014,
   author = 	 {Christian Collberg and Todd Proebsting and Gina Moraila and Akash Shankaran and Zuoming Shi and Alex M. Warren},
   title = 	 {{Measuring Reproducibility in Computer Systems Research}},
