--- a/jors2015.tex
+++ b/jors2015.tex
@@ -132,15 +132,15 @@ is often seen to give your competitors an advantage, but we should be
 shining light into these ``black boxes''~\cite{morin-et-al:2012}. In
 essence: better software, better research~\cite{goble:2014}.
 
-Nevertheless, there is promising existing work in this
+There is promising existing work in this
 area~\cite{sim-et-al:2003,chirigati-et-al:2013,stodden+miguez:2014,stodden-et-al:2015},
 as well as a number of manifestos for reproducible research and
-community initiatives, such as the Recomputation
-Manifesto~\cite{gent:2013}\footnote{\url{http://www.recomputation.org/}}
-and
-cTuning~\cite{fursin-et-al:2014}\footnote{\url{http://ctuning.org/}},
+community initiatives~\cite{gent:2013, fursin-et-al:2014,
+  ReproResearch2010, collberg-et-al:2014, Bailey_setthe, DBLP:journals/corr/JamesWS14,
+},
 along with curated recommendations on where to publish research
-software\footnote{\url{http://www.software.ac.uk/resources/guides/which-journals-should-i-publish-my-software}}.
+software\footnote{\url{http://www.software.ac.uk/resources/guides/which-journals-should-i-publish-my-software}}
+and the legal situation~\cite{stodden2008}.
 
 However, things can, should and need to be much better. Building upon
 previous work~\cite{crick-et-al_wssspe2}, we present a call to action,
