More on #5 and #6.

--- a/jors2015.tex
+++ b/jors2015.tex
@@ -142,13 +142,14 @@ along with curated recommendations on where to publish research
 software\footnote{\url{http://www.software.ac.uk/resources/guides/which-journals-should-i-publish-my-software}}
 and the legal situation~\cite{stodden2008}.
 
-However, things can, should and need to be much better. Building upon
+However, things can, should and need to be much better if we want to 
+keep to the scientific tenets of openness and sharing. Building upon
 previous work~\cite{crick-et-al_wssspe2}, we present a call to action,
 along with a set of recommendations which we hope will lead to better,
 more sustainable, more re-useable software, to move towards an
 imagined future practice and usage of scientific software
-development. The basis for many of these recommendations is predicated
-on the fundamental scientific tenets of openness and sharing.
+development. We also propose a specification for a service that
+automates many of our recommendations. 
 
 \section{We Need to Talk About Reproducibility}
 
