Small rewrite to say that "algorithms have implementations". Fixes #14.

--- a/jors2015.tex
+++ b/jors2015.tex
@@ -529,11 +529,12 @@ the developer, to widen the testing and identify potential bugs.
 \end{enumerate}
 
 The whole premise of our previous paper~\cite{crick-et-al_recomp2014}
-is that {\emph{algorithms}} (implementations) and {\emph{models}}
-(benchmarks) are inextricably linked. Algorithms are designed for
-certain types of models; models, though created to mimic some physical
-reality, also serve to stress the current known algorithms. An
-integrated autonomous open cloud-based service can make this link explicit.
+is that {\emph{algorithms}} (and their {\emph{implementations}}) and
+{\emph{models}} (sometimes also called {\emph{benchmarks}}) are
+inextricably linked. Algorithms are designed for certain types of
+models; models, though created to mimic some physical reality, also
+serve to stress the current known algorithms. An integrated autonomous
+open cloud-based service can make this link explicit.
 
 By developing a cloud-based, centralised service, which performs
 automated code compilation, testing and benchmarking (with associated
@@ -555,8 +556,8 @@ science to be more productive, rather than reproducibility being an
 overhead on their day-to-day work. In the same way that tools such as
 GitHub make collaborating easier while simultaneously allowing
 effortless sharing, we envisage our system being similarly usable for
-sharing and testing algorithms, software, models and benchmarks
-online.
+sharing and testing algorithms and their implementations, software,
+models and benchmarks online.
 
 Suppose you have come up with a better algorithm to deal with some
 standard problem.  You write up the paper on the algorithm, and you
