Minor fix to ref list

--- a/jors2015.tex
+++ b/jors2015.tex
@@ -135,9 +135,8 @@ essence: better software, better research~\cite{goble:2014}.
 There is promising existing work in this
 area~\cite{sim-et-al:2003,chirigati-et-al:2013,stodden+miguez:2014,stodden-et-al:2015},
 as well as a number of manifestos for reproducible research and
-community initiatives~\cite{gent:2013, fursin-et-al:2014,
-  ReproResearch2010, collberg-et-al:2014, Bailey_setthe, DBLP:journals/corr/JamesWS14,
-},
+community
+initiatives~\cite{gent:2013,fursin-et-al:2014,ReproResearch2010,collberg-et-al:2014,Bailey_setthe,DBLP:journals/corr/JamesWS14},
 along with curated recommendations on where to publish research
 software\footnote{\url{http://www.software.ac.uk/resources/guides/which-journals-should-i-publish-my-software}}
 and the legal situation~\cite{stodden2008}.
