--- a/jors2015.bib
+++ b/jors2015.bib
@@ -24,8 +24,7 @@
     author = {David Bailey and Jonathan Borwein and Victoria Stodden},
     title = {Set the default to \"open\"},
     journal = {Notices of the AMS},
-    year = {},
-    pages = {2013}
+    year = {2013},
 }
 
 
