--- a/jors2015.tex
+++ b/jors2015.tex
@@ -71,7 +71,7 @@ browser) boldly stated in 2011 that ``{\emph{software is eating the
 world}}''~\cite{andreessen:2011}. It is true: we clearly live in a
 computational world, with our everyday communications, entertainment,
 shopping, banking, transportation, national security, etc, all heavily
-dependent on (or replaced by) software.
+dependent on -- or overtaken by -- software and data.
 
 This is particularly true for science and engineering. A 2012 report
 by the Royal Society stated that computational techniques have
@@ -236,7 +236,7 @@ flexible ones.\\
 
 
 % Recommendation III
-\subsection{{\emph{Be A Better Person}}}
+\subsection{{\emph{Be A Better Academic Citizen}}}
 
 If you have the appropriate skills and the experience, you can always
 create better software. We have seen the emergence of successful
