--- a/jors2015.tex
+++ b/jors2015.tex
@@ -78,11 +78,11 @@ by the Royal Society stated that computational techniques have
 ``{\emph{moved on from assisting scientists in doing science, to
 transforming both how science is done and what science is
 done}}''~\cite{rssaaoe:2012}. Many of the examples discussed in this
-paper take advantage of a fundamental advantage of computer science
+paper exploit a fundamental advantage of computer science
 and more broadly, computational science: the unique ability to share
 the raw outputs of their work as software and datafiles. New
 experiments, simulations, models, benchmarks, even proofs cannot be
-done without software. And this software does not consist of simple
+done without software. This software does not consist of simple
 hack-together, use-once, throw-away scripts; scientific software
 repositories contain thousands, perhaps millions, of lines of code and
 they increasingly need to be actively supported and maintained. More
@@ -106,7 +106,7 @@ movement, with new models being
 proposed~\cite{deroure:2010,stodden-et-al:2013,fursin+dubach:2014}. Journals
 such as Nature, PLoS Computational Biology and Bioinformatics
 explicitly require that source code and data is made available online
-under some form of open source license. While these initiative are
+under some form of open source license. While these initiatives are
 great, they are often optional, seem piecemeal, and do little to
 enable verification or validation of scientific results at a later
 stage. Even within the same field, there are different ideas of what
@@ -392,7 +392,7 @@ networks~\cite{Kauffman1969,Schaub2007}.  These networks can be
 expressed in SMV format, but this would mean that standard
 qualitative/Boolean network behaviours have to be hard-coded for each
 variable, introducing the possibility for errors. In the
-BioModelAnalyzer tool~\cite{Benque2012}, the XML contains \emph{only}
+BioModelAnalyzer tool~\cite{Benque2012}, the JSON contains \emph{only}
 the modifiable parameters limiting the possibility for error.\\
 
 \noindent {\textbf{Recommendation {\textrm{VII}}:}} Avoid creating
@@ -436,7 +436,7 @@ SV-COMP\footnote{\url{http://sv-comp.sosy-lab.org/2015/}} and
 Termination Problems Data
 Base\footnote{\url{http://termination-portal.org/wiki/TPDB}} are on
 that journey. Such repositories would allow the tests to be taken and
-easily analysed by any competitor tool.
+easily analysed by any competitor tool. 
 
 % Recommendation IX
 \subsection{{\emph{Test It To See}}}
