Added a link and references to open competitions for algorithms
Notably CASP and CAPRI- single blind competition for protein structure
Also DREAM challenges- these are less specific but have a similar
motivation

--- a/jors2015.bib
+++ b/jors2015.bib
@@ -1,3 +1,30 @@
+@article {Moult2015,
+author = {Moult, John and Fidelis, Krzysztof and Kryshtafovych, Andriy and Schwede, Torsten and Tramontano, Anna},
+title = {Critical assessment of methods of protein structure prediction (CASP) — round x},
+journal = {Proteins: Structure, Function, and Bioinformatics},
+volume = {82},
+issn = {1097-0134},
+url = {http://dx.doi.org/10.1002/prot.24452},
+doi = {10.1002/prot.24452},
+pages = {1--6},
+keywords = {CASP, community wide experiment, protein structure prediction},
+year = {2014},
+}
+
+@article {Lensink2017,
+author = {Lensink, Marc F. and Velankar, Sameer and Wodak, Shoshana J.},
+title = {Modeling protein–protein and protein–peptide complexes: CAPRI 6th edition},
+journal = {Proteins: Structure, Function, and Bioinformatics},
+volume = {85},
+number = {3},
+issn = {1097-0134},
+url = {http://dx.doi.org/10.1002/prot.25215},
+doi = {10.1002/prot.25215},
+pages = {359--377},
+keywords = {capri, protein docking, blind prediction, water modeling, protein–peptide interation},
+year = {2017},
+}
+
 
 @Article{stodden2008,
   author = 	 {Victoria Stodden},
