--- a/jors2015.tex
+++ b/jors2015.tex
@@ -436,7 +436,13 @@ SV-COMP\footnote{\url{http://sv-comp.sosy-lab.org/2015/}} and
 Termination Problems Data
 Base\footnote{\url{http://termination-portal.org/wiki/TPDB}} are on
 that journey. Such repositories would allow the tests to be taken and
-easily analysed by any competitor tool. 
+easily analysed by any competitor tool. Some communities go further;
+the Critical assessment of methods of protein structure prediction
+and prediction of interactions (CASP and CAPRI)\cite{Moult2015,Lensink2017} communities present 
+a single-blind test of protein folding and docking
+algorithms annually, allowing open competition on a level playing 
+field. Similarly the DREAM challenges\footnote{\url{http://dreamchallenges.org/}} 
+attempt to address large scale problems through open competition.
 
 % Recommendation IX
 \subsection{{\emph{Test It To See}}}
