--- a/jors2015.tex
+++ b/jors2015.tex
@@ -517,7 +517,7 @@ and running tests contributed in public (``Data Representations'',
 ``World Records'') in a completely reproducible regime.
 
 The service we describe here can be seen as a specification. We
-haven't built it, but many servics like travis-ci or Azure VSTS
+haven't built it, but many services like travis-ci or Azure VSTS
 provide some of the mechanical parts of it. 
 
 A service for reproducibility is intended to play three important
