Added earlier reference to SBML-Qual

--- a/jors2015.tex
+++ b/jors2015.tex
@@ -393,7 +393,8 @@ expressed in SMV format, but this would mean that standard
 qualitative/Boolean network behaviours have to be hard-coded for each
 variable, introducing the possibility for errors. In the
 BioModelAnalyzer tool~\cite{Benque2012}, the JSON contains \emph{only}
-the modifiable parameters limiting the possibility for error.\\
+the modifiable parameters limiting the possibility for error. The 
+SBML-Qual standard achieves a similar goal for logical models \cite{Chaouiya2013}.\\
 
 \noindent {\textbf{Recommendation {\textrm{VII}}:}} Avoid creating
 new representations when common formats already exist. Use existing
