--- a/jors2015.tex
+++ b/jors2015.tex
@@ -46,32 +46,33 @@
 The reproduction and replication of novel results has become a major
 issue for a number of scientific disciplines. In computer science and
 related computational disciplines such as systems biology, the issues
-closely revolve around the ability to implement novel algorithms and
-models. Taking an approach from the literature and applying it to a
-new codebase frequently requires local knowledge missing from the
-published manuscripts and project websites. Alongside this issue,
-benchmarking, and the development of fair --- and publicly available
---- benchmark sets present another barrier.
+closely revolve around the ability to implement (and exploit) novel
+algorithms and models. Taking a new approach from the literature and
+applying it to a new codebase frequently requires local knowledge
+missing from the published manuscripts and project websites. Alongside
+this issue, benchmarking, and the development of open, transparent and
+fair benchmark sets present another barrier.
 
 In this paper, we outline several suggestions to address these issues,
 driven by specific examples from a range of scientific domains.
-Finally, based on these suggestions, we propose a new open automated
-platform for scientific software development which effectively
-abstracts specific dependencies from the individual researcher and
-their workstation, allowing easy sharing and reproduction of
-results. This new cyberinfrastructure for computational science offers
-the potential to incentivise a culture change and drive the adoption
-of new techniques to improve the efficiency of scientific exploration.
+Finally, based on these suggestions, we propose a prototype open
+automated platform for scientific software development which
+effectively abstracts specific dependencies from the individual
+researcher and their workstation, allowing easy sharing and
+reproduction of results. This new e-infrastructure for reproducible
+computational science offers the potential to incentivise a culture
+change and drive the adoption of new techniques to improve the
+efficiency of scientific exploration.
 \end{abstract}
 
 \section{Introduction}
 
 Marc Andreessen (co-author of Mosaic, the first widely used Web
 browser) boldly stated in 2011 that ``{\emph{software is eating the
-world}}''~\cite{andreessen:2011}. It is true: we clearly live in a
+world}}''~\cite{andreessen:2011}. This is true: we live in a
 computational world, with our everyday communications, entertainment,
 shopping, banking, transportation, national security, etc, all heavily
-dependent on -- or overtaken by -- software and data.
+data-driven and largely overtaken by software.
 
 This is particularly true for science and engineering. A 2012 report
 by the Royal Society stated that computational techniques have
