No more sentences starting with "But"

--- a/jors2015.tex
+++ b/jors2015.tex
@@ -118,7 +118,7 @@ community~\cite{barnes:2010,morin-et-al:2012,joppa-et-al:2013}.
 Whilst the retraction of several studies has drawn the focus of many
 commentators, automated systems, which allow easy reproduction of
 results, offer the potential to improve the efficiency of scientific
-exploration and drive the adoption of new techniques. But just
+exploration and drive the adoption of new techniques. However, just
 publishing (linked) scientific data is not enough to ensure the
 required reusability~\cite{bechhofer-et-al:2013}. There exists a wider
 socio-cultural problem that pervades the scientific community, with
@@ -218,7 +218,7 @@ before~\cite{deMoura2012Z3open}.
 
 Even ignoring licensing issues, sometimes the source is not made open
 because the author thinks that it isn't quite finished. 
-But you should follow the ``release early, release often'' mantra, and
+You should follow the ``release early, release often'' mantra, and
 further release somewhere public like GitHub, where it is easy to
 share and fork. Your code is good enough~\cite{barnes:2010}.
 \\
@@ -356,7 +356,7 @@ for a while, but will `bit-rot' so quickly that even the author cannot
 compile it in a couple of month's time.\\
 
 \noindent {\textbf{Recommendation {\textrm{VI}}:}} Definitely provide the
-source code of the tool. But you must also provide
+source code of the tool, but also provide
 details of precisely \emph{how} you built and wrote the software. For
 example:
 
@@ -378,8 +378,8 @@ Section~\ref{sec:conclusion} for more on this.
 \subsection{{\emph{Data Representations and Formats}}}
 
 We often do not, and should not, care how things are stored on disk,
-what their precise representations are. But a common, constrained,
-standard representation is good for passing tests or models around
+what their precise representations are. A common, constrained,
+standard representation is however good for passing tests or models around
 between different tools. A properly described representation, like the
 SMT-LIB format (\url{http://smt-lib.org}) for Satisfiability
 Modulo Theory (SMT) solvers, where both the syntax and semantics are
@@ -656,8 +656,8 @@ Nevertheless, this proposed new cyberinfrastructure could have a
 profound impact on the way that computational science is performed,
 repositioning the role of models, algorithms and benchmarks and
 accelerating the research cycle, perhaps truly enabling a ``fourth
-paradigm'' of data intensive scientific discovery~\cite{hey:2009}. But
-ultimately, an open discussion and understanding of what
+paradigm'' of data intensive scientific discovery~\cite{hey:2009}.
+Ultimately though, an open discussion and understanding of what
 reproducibility means for the wider computational science research
 community is important: we all need to explicitly state that this is
 worthwhile and address it, or don't bother doing it at all.
