--- a/jors2015.tex
+++ b/jors2015.tex
@@ -211,10 +211,9 @@ openness (GROMACS uses the GNU Lesser General Public License
 (LGPL)~\cite{Hess2008}, CHARMM and Desmond are Academic/Commercial
 software licences~\cite{Brooks2009,Bowers2006}, Amber and NAMD are
 custom open-like licences). Z3 is an example from the verification
-area: the code itself is not open source, but the MSR-LA license that
-allows the source code to be read, copied, forked for academic use,
-provides researchers in the field much more than
-before~\cite{deMoura2012Z3open}.
+area: the code itself was only recently made open source, but the previous MSR-LA license
+allowed the source code to be read, copied, forked for academic use,
+providing researchers in the field substantial flexibility~\cite{deMoura2012Z3open}.
 
 Even ignoring licensing issues, sometimes the source is not made open
 because the author thinks that it isn't quite finished. 
